--- a/src/index.styl
+++ b/src/index.styl
@@ -1,9 +1,39 @@
-lala = blue;
-
 body {
-  background-color: lala;
+  background: #eee;
+  padding: 100px;
+  font: normal normal 13px tahoma, sans-serif;
 }
 
-body:after {
-  content: "Hhello world?";
+
+li {
+  list-style-type: none;
+  padding: 0;
+  padding: 0;
+  background: #FFF
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 2px;
+  margin: 2px 0;
+  position: relative;
+
+  > a {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
 }
+
+h3 {
+  font-weight: normal;
+  margin: 0;
+}
+
+nav {
+  margin: 5px 10px;
+
+  a {
+    color: blue;
+  }
+}
+
+
